fixes navbar on mobile view

--- a/css/app.css
+++ b/css/app.css
@@ -42,7 +42,7 @@ html {
   }
 
   .nav-wrapper {
-    @apply relative h-12 lg:h-auto lg:px-8 flex justify-between items-center lg:shadow-none z-50;
+    @apply relative h-12 lg:h-auto px-4 lg:px-8 flex justify-between items-center lg:shadow-none z-50;
   }
 
   .navbar.fixed-nav {
